# daily_digest

./: .gitattributes  .gitignore  LICENSE  README.md  ai_companies.atom  ai_companies.json  ai_companies.xml  ai_tools.atom  ai_tools.json  ai_tools.xml  all.atom  all.json  all.xml  archive.html  archive.json  community.atom  community.json  community.xml  index.html  last_scrape_times.json  news.atom  news.json  news.xml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: update-feeds.yml
src/: config.py  main.py
src/scrapers/: base_scraper.py  rss_scraper.py
